--- a/HTML and CSS/Genarl.css
+++ b/HTML and CSS/Genarl.css
@@ -9,9 +9,13 @@ body {
   padding-top: 80px;
   padding-left: 95px;
   padding-right: 25px;
-  background-color: rgb(248, 248, 248);
+  background-color: rgb(236, 236, 236);
 }
 
 p {
+  margin: 0;
+}
+
+h4 {
   margin: 0;
 }
