--- a/HTML and CSS/Video_Preview.css
+++ b/HTML and CSS/Video_Preview.css
@@ -9,6 +9,7 @@
 
 .video-box {
   height: 250px;
+  position: relative;
 }
 
 @media (max-width: 870px) {
@@ -61,6 +62,48 @@
 .profile {
   width: 100%;
   border-radius: 50px;
+}
+
+.channel-profile:hover .preview-profile {
+  position: relative;
+  opacity: 1;
+}
+
+.preview-profile {
+  display: flex;
+  align-items: center;
+  position: absolute;
+  bottom: -10;
+  width: 200px;
+  height: 50px;
+  background-color: white;
+  z-index: 300;
+  padding: 10px;
+  border-radius: 10px;
+  cursor: pointer;
+  box-shadow: 2px 3px 10px rgba(0, 0, 0, 0.3);
+  opacity: 0;
+  transition: opacity 0.20s;
+  pointer-events: none;
+}
+
+.preview-profile img {
+  width: 50px;
+  height: 50px;
+  border-radius: 40px;
+}
+
+.preview-profile div {
+  padding-left: 5px;
+}
+
+.preview-profile div h5 {
+  font-weight: bold;
+}
+
+.preview-profile div p {
+  margin-top: 5px;
+  color: gray;
 }
 
 .channel-status {
